[project]
name = "synthcity"
description = "Synthetic data generator and evaluator!"
license = { text = "LICENSE" }
readme = "README.md"

dynamic = ["version"]

dependencies = [
  "scikit-learn>=1.0",
  "nflows>=0.14",
  "pandas>=2.0",
  "torch>=2.0.0",
  "numpy>=1.20",
  "lifelines>=0.27,!= 0.27.5",
  "opacus>=1.3",
  "decaf-synthetic-data>=0.1.6",
  "optuna>=3.1",
  "shap",
  "tqdm",
  "loguru",
  "pydantic",
  "cloudpickle",
  "scipy",
  "xgboost",
  "geomloss",
  "pgmpy",
  "redis",
  "pycox",
  "xgbse",
  "pykeops",
  "fflows",
  "monai",
  "tsai; python_version>'3.7'",
  "importlib-metadata; python_version<'3.8'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
testing = [
  "setuptools",
  "pytest",
  "pytest-cov",
  "jupyter",
  "notebook",
  "bandit",
  "black",
  "black-nb",
  "darglint",
  "doc8",
  "flake8",
  "isort",
  "nbconvert",
  "nbformat",
  "pytest-benchmark",
  "pytest-xdist[psutil]",
  "pytest-xprocess",
  "igraph",
  "py",                   # pytest 7.2.0 bug https://github.com/pytest-dev/pytest-xprocess/issues/110
  "pre-commit",
  "tabulate",
  "click",
]
goggle = ["dgl", "torch_geometric", "torch_sparse", "torch_scatter"]

[tool.pytest.ini_options]
addopts = ["--cov synthcity --cov-report term-missing", "--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]
markers = ["slow: mark tests as slow (deselect with '-m \"not slow\"')"]

# Use pytest markers to select/deselect specific tests
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/synthcity/version.py"
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
